height of employee-list-container fixed (layout issue)

--- a/app/assets/stylesheets/index.css.scss
+++ b/app/assets/stylesheets/index.css.scss
@@ -367,7 +367,7 @@ fieldset{
 
 #employee-list-container{
   overflow-y: auto;
-  height: 340px;
+  height: 245px;
 }
 
 #employee-list{
